@@ -35,10 +35,6 @@
 # Mask new versions for caution
 >sys-fs/udev-135-r4
 
-# Daniel Robbins <drobbins@funtoo.org> (08 Apr 2009)
-# mask highly experimental versions due to build breakages
->=sys-apps/sandbox-1.2.18.1-r3
-
 # Mounir Lamouri <volkmar@gentoo.org> (08 Apr 2009)
 # This lib is not used by any package and it doesn't work on amd64
 # Upstream doesn't maintain this package anymore
